# owui-pipelines

./: .gitignore  Dockerfile  README.md  abstract_pipeline.py  pyproject.toml
mag-synth/: main.py
mag-synth/modules/gatekeeper/: driver.py  prompts.py
mag-synth/utils/: db_requests.py  schemas.py
pipelines/: magsynth_pipeline.py
pipelines/utils/core/: __init__.py  schemas.py
pipelines/utils/magsynth/: schemas.py
pipelines/utils/magsynth/prompts/: general_query_answer.py  query_categorization.py
pipelines/utils/magsynth/weights/: features.pkl  scaler_coer.pkl  scaler_mr.pkl  scaler_sat.pkl
src/: magsynth_pipeline.py
src/utils/core/: schemas.py
src/utils/magsynth/: schemas.py
