[project]
name = "owui-pipelines"
version = "0.1.0"
description = "Pipelines for Open WebUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.17.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.3",
]
